index模块新增八一店会员卡兑换

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -65,6 +65,7 @@
                         <ul class="nav nav-second-level">
                             <li><a class="J_menuItem" href="{:url('Member/findPassword')}">查询密码</a></li>
                             <li><a class="J_menuItem" href="{:url('Member/ticketList')}">电子代金券</a></li>
+                            <li><a class="J_menuItem" href="{:url('Member/replace')}">八一店换卡 &nbsp;&nbsp;<span class="glyphicon glyphicon-resize-small" style="top: 2px;color:#23c6c8;" aria-hidden="true"></span></a></li>
                         </ul>
                     </li>
                     
