添加换卡页面

--- a/application/index/view/member/newcard.html
+++ b/application/index/view/member/newcard.html
@@ -31,16 +31,15 @@ table tr td {width:202px;font-size:12px;}
 				<input class="form-control" id="cardno" name="code" type="text" placeholder="请输入卡号" value="" />
 				<span class="input-group-btn"><button class="btn btn-w-m btn-info" id="queryBtn" type="button">查询</button></span>
 			</div>
-			<table class="table table-bordered">
-				<tbody>
-					<tr><th>卡号:</th><td style="font-size:14px;"></td></tr>
-					<tr><th>金额:</th><td style="font-size:14px;"></td></tr>
-					<tr><th>状态：</th><td></td></tr>
-				</tbody>
-			</table>
-			<div>
-				<button id="dhBtn" class="btn btn-warning btn-block">立即兑换</button>
-			</div>
+            <form action="" method="">
+                <div class="form-group">
+                    <label for="">新卡号</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-sm btn-primary">确认兑换</button>
+                </div>
+            </form>
 		</div>
 	</div>
 	</div>
