增加八一店旧卡兑换页面处理

--- a/application/index/view/member/replace.html
+++ b/application/index/view/member/replace.html
@@ -16,10 +16,10 @@
 table {border-collapse:collapse;border:1px dashed #aaa;border-spacing:10px 50px;margin-top:10px;}
 table tr th,table tr td {padding:10px;border:1px dashed #aaa;}
 table tr td {width:202px;font-size:12px;}
-#hxBtn {display:none;}
+#dhBtn {display:none;}
 
 </style>
-<script src="__STATIC__/index/js/vip_replace.js?v=20170706"></script>
+<script src="__STATIC__/index/js/vip_replace.js?v=20170710_0"></script>
 </head>
 <body>
 <div class="row">
@@ -34,7 +34,7 @@ table tr td {width:202px;font-size:12px;}
 			<table class="table table-bordered">
 				<tbody>
 					<tr><th>卡号:</th><td style="font-size:14px;"></td></tr>
-					<tr><th>金额:</th><td style="font-size:14px;"></td></tr>
+					<tr><th>余额:</th><td style="font-size:14px;"></td></tr>
 					<tr><th>状态：</th><td></td></tr>
 				</tbody>
 			</table>
@@ -45,6 +45,5 @@ table tr td {width:202px;font-size:12px;}
 	</div>
 	</div>
 </div>
-
 </body>
 </html>
