--- a/application/index/view/member/newcard.html
+++ b/application/index/view/member/newcard.html
@@ -24,24 +24,14 @@ table tr td {width:202px;font-size:12px;}
 <body>
 <div class="row">
 	<div class="col-sm-3">
-	<div class="ibox float-e-margins">
-		<div class="ibox-title"><h5>好先生旧卡换卡</h5></div>
-		<div class="ibox-content">
-			<div class="input-group">
-				<input class="form-control" id="cardno" name="code" type="text" placeholder="请输入卡号" value="" />
-				<span class="input-group-btn"><button class="btn btn-w-m btn-info" id="queryBtn" type="button">查询</button></span>
+		<div class="ibox float-e-margins">
+			<div class="ibox-content">
+				<div class="form-group">
+					<label for="">新的爱邻会员卡卡号</label>
+					<input type="text" class="form-control" name="new_card" id="new_card">
+				</div>
 			</div>
-            <form action="" method="">
-                <div class="form-group">
-                    <label for="">新卡号</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-sm btn-primary">确认兑换</button>
-                </div>
-            </form>
 		</div>
-	</div>
 	</div>
 </div>
 
