增加八一店换卡的记录查询

--- a/application/index/view/member/replace.html
+++ b/application/index/view/member/replace.html
@@ -17,15 +17,15 @@ table {border-collapse:collapse;border:1px dashed #aaa;border-spacing:10px 50px;
 table tr th,table tr td {padding:10px;border:1px dashed #aaa;}
 table tr td {width:202px;font-size:12px;}
 #dhBtn {display:none;}
-
+#dhRecord {top: -1px; position: relative; left: 4px;}
 </style>
-<script src="__STATIC__/index/js/vip_replace.js?v=20170710_0"></script>
+<script src="__STATIC__/index/js/vip_replace.js?v=20170711"></script>
 </head>
 <body>
 <div class="row">
 	<div class="col-sm-3">
 	<div class="ibox float-e-margins">
-		<div class="ibox-title"><h5>好先生旧卡换卡</h5></div>
+		<div class="ibox-title"><h5>好先生旧卡换卡</h5><a id="dhRecord" href="javascript:;">兑换记录</a></div>
 		<div class="ibox-content">
 			<div class="input-group">
 				<input class="form-control" id="cardno" name="code" type="text" placeholder="请输入卡号" value="" />
